Break text to prevent overflow and right align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,8 @@ main {
     border: 0.063rem solid hsl(0, 0%, 85%);
     border-radius: 0.625rem;
     box-shadow: inset 0 0 0.125rem 0.063rem hsla(0, 0%, 0%, 0.3);
+    word-break: break-all;
+    text-align: right;
 }
 
 .previous-output {
